video gap fixed

--- a/style.scss
+++ b/style.scss
@@ -96,7 +96,7 @@ a {
 
 .video {
     position: absolute;
-    top: -6%;
+    top: 0%;
     left: 0;
     z-index: -1;
     width: 100vw;
